--- a/index.html
+++ b/index.html
@@ -1,12 +1,187 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <title>yet to come</title>
-  </head>
-  <body>
-    <h1>basic github hosting setup</h1>
-    <p>needs bootstrap & some jquery!</p>
-    <p>... sooooon ...</p>
-  </body>
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>bootstrap ressources</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <div class="navbar navbar-default">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">En_Kidu</a>
+        </div>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home (active)</a>
+                </li>
+                <li><a href="#">Lab</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Showcase <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Project 1</a>
+                        </li>
+                        <li><a href="#">Project 2</a>
+                        </li>
+                        <li><a href="#">Project 3</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Other Stuff</li>
+                        <li><a href="#">Thingy 1</a>
+                        </li>
+                        <li><a href="#">Thingy 2</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <input class="form-control col-lg-8" placeholder="Search" type="text">
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">About</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Github</a>
+                        </li>
+                        <li><a href="#">Facebook</a>
+                        </li>
+                        <li><a href="#">Twitter</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="#">Location</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/01.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/02.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/03.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/04.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/05.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+                <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/06.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/07.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/08.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/09.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/10.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+                <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/12.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/13.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/14.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/15.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/16.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+                <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/17.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/18.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <a href="#" class="thumbnail">
+                <img src="img/19.jpg" class="img-rounded" alt="...">
+            </a>
+        </div>
+    </div>
+
+    <!-- jQuery Version 1.11.0 -->
+    <script src="js/jquery-1.11.0.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
