--- a/index.html
+++ b/index.html
@@ -26,153 +26,164 @@
 
 <body>
 
-    <div class="navbar navbar-default">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">En_Kidu</a>
-        </div>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home (active)</a>
-                </li>
-                <li><a href="#">Lab</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Showcase <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Project 1</a>
-                        </li>
-                        <li><a href="#">Project 2</a>
-                        </li>
-                        <li><a href="#">Project 3</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Other Stuff</li>
-                        <li><a href="#">Thingy 1</a>
-                        </li>
-                        <li><a href="#">Thingy 2</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="navbar-form navbar-left">
-                <input class="form-control col-lg-8" placeholder="Search" type="text">
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">About</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Github</a>
-                        </li>
-                        <li><a href="#">Facebook</a>
-                        </li>
-                        <li><a href="#">Twitter</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="#">Location</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">En_kidu</a>
+            </div>
+            <div style="height: 1px;" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a>
+                    </li>
+                    <li><a href="#about">About</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lab <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">p1</a>
+                            </li>
+                            <li><a href="#">p2</a>
+                            </li>
+                            <li><a href="#">p3</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">unfinished</li>
+                            <li><a href="#">p4</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/01.jpg" class="img-rounded" alt="...">
-            </a>
+    <div class="container">
+
+        <div class="row featurette">
+            <div class="col-xs-6">
+                <img class="featurette-image img-responsive" src="img/18.jpg" alt="500x500">
+            </div>
+            <div class="col-xs-6">
+                <h2 class="featurette-heading">Lorem ipsum bla blub
+                    <span class="text-muted">muted for fun</span>
+                </h2>
+                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
         </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/02.jpg" class="img-rounded" alt="...">
-            </a>
+
+        <hr class="featurette-divider">
+
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/01.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/02.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/03.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/04.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/05.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/06.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/07.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/08.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/09.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/10.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/12.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/13.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/14.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/15.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/16.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/17.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/18.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="img/19.jpg" class="img-rounded" alt="...">
+                </a>
+            </div>
         </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/03.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/04.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/05.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-                <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/06.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/07.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/08.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/09.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/10.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-                <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/12.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/13.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/14.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/15.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/16.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-                <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/17.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/18.jpg" class="img-rounded" alt="...">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a href="#" class="thumbnail">
-                <img src="img/19.jpg" class="img-rounded" alt="...">
-            </a>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <p class="lead">
+                <span class="glyphicon glyphicon-envelope"></span> email
+            </p>
+
         </div>
     </div>
 
@@ -181,6 +192,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Custom JavaScript -->
+    <script src="js/script.js"></script>
 
 </body>
 
