--- a/index.html
+++ b/index.html
@@ -38,28 +38,13 @@
                 <a class="navbar-brand" href="#">En_kidu</a>
             </div>
             <div style="height: 1px;" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
+                <ul id="nav" class="nav navbar-nav">
+                    <li class="current"><a href="#home">Home</a>
                     </li>
                     <li><a href="#about">About</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lab <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">p1</a>
-                            </li>
-                            <li><a href="#">p2</a>
-                            </li>
-                            <li><a href="#">p3</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">unfinished</li>
-                            <li><a href="#">p4</a>
-                            </li>
-                        </ul>
+                    <li><a href="#lab">Lab</a>
                     </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
                     <li><a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -68,9 +53,19 @@
         </div>
     </div>
 
+    <div id="home"></div>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Big Banner oder so!</h1>
+            <p>Canvas Demo, Video oder Showcase. Slideshow maybe?</p>
+            <p><a class="btn btn-primary btn-lg" role="button">See more »</a>
+            </p>
+        </div>
+    </div>
+
     <div class="container">
 
-        <div class="row featurette">
+        <div id="about" class="row featurette">
             <div class="col-xs-6">
                 <img class="featurette-image img-responsive" src="img/18.jpg" alt="500x500">
             </div>
@@ -84,7 +79,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="row">
+        <div id="lab" class="row">
             <div class="col-sm-6 col-md-4">
                 <a href="#" class="thumbnail">
                     <img src="img/01.jpg" class="img-rounded" alt="...">
@@ -178,7 +173,7 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div id="contact" class="footer">
         <div class="container">
             <p class="lead">
                 <span class="glyphicon glyphicon-envelope"></span> email
@@ -192,6 +187,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- One Page Scroll Navigator -->
+    <script src="js/jquery.nav.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/script.js"></script>
